# Globalese-Translator-Backend

./: .replit  <_io.BytesIO object at 0x717036686c50>  <_io.BytesIO object at 0x71f3d13e61b0>  <_io.BytesIO object at 0x76b29a993c90>  <_io.BytesIO object at 0x7b531d6b2200>  <_io.BytesIO object at 0x7f3d404b1ee0>  Dockerfile  app.py  main.py  pyproject.toml  replit.nix  requirements.txt  translationRequest.py
